[project]
name = "image-renamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tkinterdnd2>=0.4.3",
    "watchdog>=6.0.0",
]

[tool.nuitka]
onefile = true
enable-plugin = ["tk-inter"]
include-package = ["tkinterdnd2"]
include-package-data = ["tkinterdnd2"]

[dependency-groups]
dev = [
    "nuitka[app]>=4.1",
]
